# Aegis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/x64/: mysqlcppconn8.lib
sql/: iconation_account.sql  iconation_balance.sql  iconation_block.sql  iconation_icx.sql  iconation_internal_transaction.sql  iconation_irc2.sql  iconation_transaction.sql  iconation_transaction_message.sql
sql/schema/: iconation_account.sql  iconation_icx.sql  iconation_internal_transaction.sql  iconation_irc2.sql  iconation_transaction.sql
sql/scripts/: show_transaction_message_data.sql  show_transactions_count_per_day.sql  transaction_message_images.sql  transaction_top_destination.sql  transactions_count_per_day.sql  transactions_count_per_day_big_icx_transfer.sql  write_transaction_message_images.py
src/: main.cpp
src/aegis/: application.cpp  application.h  blockdownloader.cpp  blockdownloader.h
src/db/: db.cpp  db.h  exception.h  sql.cpp  sql.h
src/threadpool/: threadpool.h
tests/: main.cpp  set_fake_block_height.sh
